# Jaximal

./: pyproject.toml
.github/workflows/: ci.yml
src/jaximal/: __init__.py  core.py  io.py  nn.py  serialization.py  typing.py
tests/: test_core.py  test_serialization.py
typings/jaximal/: core.pyi  io.pyi  typing.pyi
